add variables, buttons and more

--- a/app/assets/stylesheets/smart_city_guides/items.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/items.css.sass
@@ -1,28 +1,25 @@
 .guide_home
-	.btn-primary
-		background-color: #000
-		background-image: linear-gradient(to bottom, grey, #000000)
-		background-repeat: repeat-x
-		border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
-		color: white
-		text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25)
-		height: 24px
 	ul.thumbnails
 		width: 600px
 		li
 			margin-bottom: 0px
 			width: 180px
-			height: 290px
+			height: 264px
 			.thumbnail
 				h4
 					overflow: hidden
 					white-space: nowrap
 					text-overflow: ellipsis
 					text-align: left
+					margin-bottom: 3px
+					margin-top: 3px
 				img
 					width: 175px
 				p
 					font-size: 12px
+					padding-bottom: 0px
+					margin-bottom: 0px
+					margin-top: 5px
 
 
 
@@ -64,6 +61,7 @@
 				margin-bottom: 0px
 			.li-inline
 				margin-bottom: 0px
+
 
 
 
