--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -8,6 +8,17 @@
     <meta name="description" content= "<%= yield(:description).empty? ? t('frontpage.main_title') : yield(:description) %>" >
     <meta name="generator" content="SocialStream" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" />
+    <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+    <script>
+      $(function() {
+      $( ".sortable" ).sortable({
+      revert: true
+      });
+      $( "ul, li" ).disableSelection();
+      });
+    </script>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
