--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -24,7 +24,7 @@
 <br class="clearfloat" />
 
 
-  <div class="my_guides">
+  <div class="guide_home">
     my guides
     <ul class="thumbnails">
         <%= render :partial => "guides/item" %>
