--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,9 +14,11 @@
  * require social_stream-places
  * require_tree .
  */
-
+@import "smart_city_guides/rewrite_bootsrap/variables"
 @import "social_stream-base"
+@import "smart_city_guides/rewrite_bootsrap/buttons"
 @import "smart_city_guide"
 @import "social_stream-documents"
 @import "social_stream-places"
+
 
