--- a/app/assets/stylesheets/smart_city_guides/timeline.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/timeline.css.sass
@@ -1,24 +1,29 @@
+
 #wrapper_activities
   margin-top: 30px
+  h2
+    font-size: 16px
+    margin: 0px
   @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
   .wall_input
     @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
     @include border-radius(7px) 
-    background-color: $grayLighter
+    background-color: $gray
 
-    margin-bottom: 20px
+    margin-bottom: 0px
     display: inline-block
     float: left
 
     input
-      @include grid-fluid-span(10, $fluidGridColumnWidth, $fluidGridGutterWidth)
-      margin-top: 8px
-      display: block
+      @include grid-fluid-span(6, $fluidGridColumnWidth, $fluidGridGutterWidth)
+      margin: 8px
+      display: inline-block
+      float: left
       &[type="submit"]
-        @include size (auto, auto)
+        @include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
         @include buttonBackground($blueDark, $blue, $textColor: #fff, $textShadow: 0 -1px 0 rgba(0,0,0,.25)) 
         padding: 3px 11px 4px 11px
-        float: right
+        float: left
 
 
       &[type="checkbox"]
@@ -193,4 +198,3 @@
       .actions
         display: inline-block
         margin-bottom: 10px
-
