--- a/app/views/home/_planification.html.erb
+++ b/app/views/home/_planification.html.erb
@@ -1,4 +1,4 @@
-		<li class="thumbnails_home">
+		<li class="thumbnails_home ui-state-highligh">
 			<div class="thumbnail labels">
 				<ul class="ul_planning">
 					<li class="avatar_plannings">
@@ -15,7 +15,7 @@
 				</ul>		
 			</div>	
 		</li>
-		<li class="thumbnails_home">
+		<li class="thumbnails_home ui-state-highligh">
 			<div class="thumbnail labels">
 				<ul class="ul_planning">
 					<li class="avatar_plannings">
@@ -32,7 +32,7 @@
 				</ul>		
 			</div>	
 		</li>
-		<li class="thumbnails_home">
+		<li class="thumbnails_home ui-state-highligh">
 			<div class="thumbnail labels">
 				<ul class="ul_planning">
 					<li class="avatar_plannings">
@@ -49,7 +49,7 @@
 				</ul>		
 			</div>	
 		</li>
-				<li class="thumbnails_home">
+				<li class="thumbnails_home ui-state-highligh">
 			<div class="thumbnail labels">
 				<ul class="ul_planning">
 					<li class="avatar_plannings">
@@ -66,7 +66,7 @@
 				</ul>		
 			</div>	
 		</li>
-		<li class="thumbnails_home">
+		<li class="thumbnails_home ui-state-highligh">
 			<div class="thumbnail labels">
 				<ul class="ul_planning">
 					<li class="avatar_plannings">
@@ -83,7 +83,7 @@
 				</ul>		
 			</div>	
 		</li>
-		<li class="thumbnails_home">
+		<li class="thumbnails_home ui-state-highligh">
 			<div class="thumbnail labels">
 				<ul class="ul_planning">
 					<li class="avatar_plannings">
