--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
 <article class="right_home">
 	<h4>planification</h4>
 	<div class="planification">
-		<ul class="thumbnails">
+		<ul class="thumbnails sortable">
 			<%= render :partial => "home/planification" %>
 		</ul>
 		<!--http://jqueryui.com/draggable/#sortable-->
