--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -7,24 +7,21 @@
     <!-- FIXME: search javascript functionality in 'layouts/search' -->
     <a href="pull-left"><h2 class="brand">holamundo</h2></a>
     <ul class="nav pull-right">
-      <li>
-        <a class="changes_navbar" href="/plannings">my guides</a>
-      </li>
-      <li>
-        <a class="changes_navbar" href="/diaries">my diaries</a>
-      </li>
-    </ul>
-
-    <ul class="nav pull-right">
       <div class="search-nav pull-left">
       <%= form_tag search_path, method: 'get', class: "navbar-search pull-right" do %>
         <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name') %>
       <% end %>
       </div>
       <li>
+        <a class="changes_navbar" href="/plannings">my guides</a>
+      </li>
+      <li>
+        <a class="changes_navbar" href="/diaries">my diaries</a>
+      </li>
+      <li>
         <%= link_to current_subject do %>
           <%#= image_tag current_subject.logo.url(:small) %>
-          <span class="name"><%= truncate_name(current_subject.name, length: 15) %></span>
+          <span class="name">my profile<%= truncate_name(current_subject.name, length: 15) %></span>
         <% end %>
       </li>
       <!--li>
