--- a/app/assets/stylesheets/smart_city_guides/places1.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/places1.css.sass
@@ -21,8 +21,9 @@
 	margin-top: 20px
 
 .titlecentral
-	left: 45%
-	display: inline
+	text-align: center
+	display: inline-block
 	position: absolute
 	z-index: 2
+	width: 940px
 
