changes planning and activities

--- a/app/assets/stylesheets/smart_city_guides/home.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/home.css.sass
@@ -58,13 +58,26 @@
 
 
 	.right_home
-		h4
-			margin-top: 0px
 		@include makeColumn(4, 0)
 		margin-left: 0px
-		
 		float: right
-		.planification
-		.wall
+		.navbar
+			margin-bottom: 10px 
+			ul
+				padding: 0px
+				margin: 0px
+				float: right
+				li
+					display: inline-block
+					h4
+						color: grey
+						font-size: 17px
+					.dropdown-menu
+						margin-left: -100px
+						margin-top: 5px
+					.caret
+						border-bottom-color: #0088CC
+						border-top-color: #0088CC
+
 
 
