--- a/app/views/activities/_index.html.erb
+++ b/app/views/activities/_index.html.erb
@@ -1,8 +1,38 @@
 <article id="wrapper_activities">
   <header>
-    <h2>
-      <%= t 'activity.title' %>
-    </h2>
+  	<div class="navbar navbar-inverse">
+		<div class="navbar-inner">
+			<ul>
+				<li>
+					<h4>
+      			<%= t 'activity.title' %>
+    			</h4>
+    		</li>
+				<li>
+					<div class="dropdown">
+   
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+      <b class="caret"></b>
+</a>
+  <ul class="dropdown-menu">
+
+      
+
+
+    <li>
+      <a href="/settings" id="btn_menu_settings">Go to my guide</a>
+    </li>
+    <li>
+      <a href="/relation/customs">Clear planning</a>
+    </li>
+
+  </ul>
+</div>
+				</li>
+			</ul>	
+		</div>	
+	</div>
+    
   </header>
     <%= render :partial => 'activities/new', :locals => { :receiver => owner } %>
 
