--- a/app/views/guides/_item.html.erb
+++ b/app/views/guides/_item.html.erb
@@ -24,7 +24,7 @@
 				</li>
 				<li class="thumbnails_home">
 					<div class="thumbnail labels">
-						<%= image_tag('toledo.jpeg') %>
+						<%= image_tag('toledo_rio2.jpg') %>
 						<div class="caption">
 							<h4>Toledo en un día</h4>
 							<p>justo odio egestas eget quam. Donec id elit </p>
