--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,34 @@
 
 
 <article class="right_home">
-	<h4>planification</h4>
+	<div class="navbar navbar-inverse">
+		<div class="navbar-inner">
+			<ul>
+				<li><h4>Planning</h4></li>
+				<li>
+					<div class="dropdown">
+   
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+      <b class="caret"></b>
+</a>
+  <ul class="dropdown-menu">
+
+      
+
+
+    <li>
+      <a href="/settings" id="btn_menu_settings">Go to my guide</a>
+    </li>
+    <li>
+      <a href="/relation/customs">Clear planning</a>
+    </li>
+
+  </ul>
+</div>
+				</li>
+			</ul>	
+		</div>	
+	</div>
 	<div class="planification">
 		<ul class="thumbnails sortable">
 			<%= render :partial => "home/planification" %>
