--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -21,7 +21,7 @@
       <li>
         <%= link_to current_subject do %>
           <%#= image_tag current_subject.logo.url(:small) %>
-          <span class="name">my profile<%= truncate_name(current_subject.name, length: 15) %></span>
+          <span class="name"><%= truncate_name(current_subject.name, length: 15) %></span>
         <% end %>
       </li>
       <!--li>
