--- a/app/assets/stylesheets/smart_city_guides/guides.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/guides.css.sass
@@ -26,5 +26,20 @@
 		margin-left: 0px
 		float: right
 		display: inline-block
+		h4
+			text-align: left
+	.map
+		@include makeColumn(8, 0)
+		margin-left: 0px
+		display: inline-block
+		.places
+			@include makeColumn(4, 0)
+			margin-left: 0px
+			display: inline-block
+			.details
+				height: 200px
+			.list
+				height: 400px
+
 
 
