--- a/app/views/guides/show.html.erb
+++ b/app/views/guides/show.html.erb
@@ -24,7 +24,7 @@
 
     <div id="map" class="tab-pane ">
       <%= render  :partial => "guides/map",
-                  :locals => { :json => @json } %>
+                  :locals => { :json => @json, :guide => @guide } %>
 		</div>
 
     <div id="photo" class="tab-pane ">
