--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,9 +17,9 @@
 
 <article class="right_home">
 	<h4>planification</h4>
-	<div class="planification">
+	<div class="planning">
 		<ul class="thumbnails sortable">
-			<%= render :partial => "home/planification" %>
+			<%#= render :partial => "places/item" %>
 		</ul>
 		<!--http://jqueryui.com/draggable/#sortable-->
 	</div>
