--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -12,12 +12,12 @@
         <%= text_field_tag :q, nil, autocomplete: :off, class: 'search-query', placeholder: t('search.name') %>
       <% end %>
       </div>
-      <li>
-        <a class="changes_navbar" href="/plannings">my guides</a>
+      <!--li>
+        <a class="changes_navbar" href="/plannings">my plannings</a>
       </li>
       <li>
         <a class="changes_navbar" href="/diaries">my diaries</a>
-      </li>
+      </li> -->
       <li>
         <%= link_to current_subject do %>
           <%#= image_tag current_subject.logo.url(:small) %>
