--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,9 @@
 	<div class="navbar navbar-inverse">
 		<div class="navbar-inner">
 			<ul>
+
 				<li><h4>Planning</h4></li>
+
 				<li>
 					<div class="dropdown">
     				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -36,12 +38,14 @@
   					</ul>
 					</div>
 				</li>
+
 			</ul>	
 		</div>	
 	</div>
+
 	<div class="planification">
 		<ul class="thumbnails sortable">
-			<%#= render :partial => "places/item" %>
+			<%= render :partial => "home/planification" %>
 		</ul>
 		<!--http://jqueryui.com/draggable/#sortable-->
 	</div>
