--- a/app/views/guides/new.html.erb
+++ b/app/views/guides/new.html.erb
@@ -1,6 +1,7 @@
-<%= form_for ([@trip, @guide]) do |f| %>
+<%= form_for @guide do |f| %>
 	<h2>Form to create a new guide</h2>
 	<%= f.label :title %>
 	<%= f.text_field :title %>
+	<%= f.hidden_field :trip_id %>
 	<%= f.submit %>
 <% end %>
