--- a/app/views/activities/_actions.html.erb
+++ b/app/views/activities/_actions.html.erb
@@ -8,7 +8,7 @@
   <%= render :partial => 'activities/like',
              :locals => { :activity => activity } %>   
 
-  <%= render :partial => 'activities/audience',
+  <%#= render :partial => 'activities/audience',
              :locals => { :activity => activity } %>   
 
 </div>
