--- a/app/assets/stylesheets/smart_city_guides/guides.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/guides.css.sass
@@ -8,9 +8,7 @@
 		h4
 			text-align: left
 		.info
-			text-align: left
-			overflow-y: scroll
-			height: 350px
+			text-align: justify
 			padding-right: 5px
 			.cover
 				width: 200px
@@ -18,8 +16,8 @@
 				display: inline-block
 				float: left
 				img
-					width: 190px
-					height: 190px
+					width: 180px
+					height: 180px
 
 	.comments
 		@include makeColumn(5, 0)	
@@ -32,14 +30,17 @@
 		@include makeColumn(8, 0)
 		margin-left: 0px
 		display: inline-block
-		.places
-			@include makeColumn(4, 0)
-			margin-left: 0px
-			display: inline-block
-			.details
-				height: 200px
-			.list
-				height: 400px
+	.places
+		@include makeColumn(4, 0)
+		display: inline-block
+		margin-left: 0px
+		height: 414px
+		overflow-y: scroll
+		overflow-x: hidden
+		
+
+
+
 
 
 
