--- a/app/assets/stylesheets/smart_city_guides/items.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/items.css.sass
@@ -66,3 +66,36 @@
 
 
 
+.places
+	.list
+		width: 100%
+		.thumbnail
+			display: inline-block
+			float: left
+			margin-bottom: -10px
+			margin-left: 10px
+			width: 290px
+			.photo
+				width: 54px
+				height: 54px
+				display: inline-block
+				float: left
+				img
+					border-radius: 5px
+					width: 54px
+					height: 54px
+					margin-left: auto
+					margin-right: auto
+
+			.caption
+				display: inline-block
+				float: left
+				padding: 5px 0 0
+				margin-left: 10px
+				width: 225px
+				address
+					margin-bottom: 0px
+
+
+
+		
