--- a/app/views/places/_item.html.erb
+++ b/app/views/places/_item.html.erb
@@ -1,20 +1,22 @@
-<div class="photo">
-	<% photos = place.photos %>
-	<% if photos.empty? %>
-		<%= link_to(raw("<i class='icon_place_70-default'></i> "), place)%>
-	<% else %>
-	    <div><%= link_to thumb_for(photos.first, 'thumb48sq'), place %></div>
-	<% end %>
-<div>
-
-
-<div><%= place.title %></div>
-<div><%= place.formatted %></div>
-<div><%= place.streetAddress %></div>
-<div><%= place.description %></div>
-
-
-
-
-
-
+<%#= place.title %>
+<%#= place.formatted %>
+<%#= place.streetAddress %>
+<%#= place.description %>
+<li class="list">
+	<div class="thumbnail">
+		<div class="photo">
+			<% photos = place.photos %>
+			<% if photos.empty? %>
+				<%= link_to(raw("<i class='icon_place_70-default'></i> "), place)%>
+			<% else %>
+			    <div><%= link_to thumb_for(photos.first, 'thumb48sq'), place %></div>
+			<% end %>
+		</div>
+		<div class="caption">
+			<a><%=link_to place.title, place %></a>
+			<address>
+				<%= place.streetAddress %>
+			</address>
+		</div>
+	</div>
+</li>
