--- a/public/phototrip.css
+++ b/public/phototrip.css
@@ -10,15 +10,15 @@ article.wrapper_photo > img.photo {
 }
 
 img.poi {
-	width: 30px;
-	height: 30px;
+	width: 20px;
+	height: 20px;
 }
 
 img.backbutton{
-	left: 0px;
-	bottom: 0px;
-	width: 100px;
-	height: 100px;
+	left: 10px;
+	bottom: 15px;
+	/*width: 100px;*/
+	/*height: 100px;*/
 	float: left;
 	position: absolute;
 }
