--- a/app/assets/stylesheets/smart_city_guides/guides.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/guides.css.sass
@@ -19,7 +19,7 @@
 					width: 180px
 					height: 180px
 
-	.comments
+	.comments_object
 		@include makeColumn(5, 0)	
 		margin-left: 0px
 		float: right
