--- a/app/assets/stylesheets/smart_city_guides/timeline.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/timeline.css.sass
@@ -188,6 +188,8 @@
       margin-right: 3px
       display: inline-block
       float: left
+      height: 15px 
+
 
     button.btn,
     input.btn[type="submit"]
