--- a/app/assets/stylesheets/smart_city_guides/_trips.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/_trips.css.sass
@@ -1,6 +1,5 @@
 .trip_content
 	width: 485px
-	border: 1px solid #DDDDDD
 	padding-top: 20px
 	float: left
 	ul
@@ -26,6 +25,10 @@
 	padding: 4px
 	transition: all 0.2s ease-in-out 0s
 	position: relative
+	img
+		width: 152px
+		height: 103px
+		border-radius: 7px 7px 7px 7px
 	.caption
 		position: absolute
 		z-index: 2
@@ -33,6 +36,15 @@
 		left: 12px
 		h4
 			color: white	
+	.caption_img
+		img
+			position: absolute
+			z-index: 2
+			bottom: 70px
+			left: 119px
+			width: auto
+			height: auto
+			
 .diary_item
 	border-bottom: 9px solid grey
 	border-left: 9px solid #DDDDDD
@@ -43,6 +55,10 @@
 	padding: 4px
 	transition: all 0.2s ease-in-out 0s
 	position: relative
+	img
+		width: 152px
+		height: 103px
+		border-radius: 7px 7px 7px 7px
 	.caption
 		position: absolute
 		z-index: 2
@@ -50,3 +66,11 @@
 		left: 12px
 		h4
 			color: white	
+	.caption_img
+		img
+			position: absolute
+			z-index: 2
+			bottom: 70px
+			left: 119px
+			width: auto
+			height: auto
