--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -48,12 +48,18 @@
             <div class="caption">
               <h4>Guía básica</h4>
             </div>
+            <div class="caption_img">
+              <img src="/assets/guia.png.gif" alt="">
+            </div>
           </div>
         <li class="diaries">
           <div class="diary_item">
             <img src="/assets/picaro.jpg" alt="Toledo_basica">
             <div class="caption">
               <h4>Guía básica</h4>
+            </div>
+            <div class="caption_img">
+              <img src="/assets/diario.png" alt="">
             </div>
           </div>
         </li> 
