--- a/app/assets/stylesheets/smart_city_guides/timeline.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/timeline.css.sass
@@ -73,6 +73,7 @@
     .media-body
       color: $grayLight
       word-wrap: break-word
+      border-bottom: 1px solid #F5F5F5
       .media-heading
         font-size: 14px
         a
@@ -220,4 +221,4 @@
       word-wrap: break-word
       .actions
         display: inline-block
-        margin-bottom: 10px
+        margin-bottom: 2px
