icons trip labels

--- a/app/assets/stylesheets/smart_city_guides/_trips.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/_trips.css.sass
@@ -28,20 +28,26 @@
 	img
 		width: 152px
 		height: 103px
-		border-radius: 7px 7px 7px 7px
+		border-radius: 7px 0px 0px 7px
 	.caption
 		position: absolute
 		z-index: 2
-		bottom: 0
-		left: 12px
+		bottom: -6px
+		left: 5px
 		h4
-			color: white	
+			background-color: black
+			border-radius: 7px 7px 7px 7px
+			color: white
+			font-size: 17px
+			height: 22px
+			opacity: 0.8
+			width: 151px
 	.caption_img
 		img
 			position: absolute
 			z-index: 2
 			bottom: 70px
-			left: 119px
+			left: 126px
 			width: auto
 			height: auto
 			
@@ -58,19 +64,25 @@
 	img
 		width: 152px
 		height: 103px
-		border-radius: 7px 7px 7px 7px
+		border-radius: 7px 0px 0px 7px
 	.caption
 		position: absolute
 		z-index: 2
-		bottom: 0
-		left: 12px
+		bottom: -6px
+		left: 4px
 		h4
-			color: white	
+			background-color: black
+			border-radius: 7px 7px 7px 7px
+			color: white
+			font-size: 17px
+			height: 22px
+			opacity: 0.8
+			width: 151px
 	.caption_img
 		img
 			position: absolute
 			z-index: 2
 			bottom: 70px
-			left: 119px
+			left: 133px
 			width: auto
 			height: auto
