--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -38,6 +38,9 @@
             <div class="caption">
               <h4>Guía básica</h4>
             </div>
+            <div class="caption_img">
+              <img src="/assets/diario24.png" alt="">
+            </div>
           </div>
         </li> 
       </ul>
@@ -49,7 +52,7 @@
               <h4>Guía básica</h4>
             </div>
             <div class="caption_img">
-              <img src="/assets/guia.png.gif" alt="">
+              <img src="/assets/guia2.png" alt="">
             </div>
           </div>
         <li class="diaries">
@@ -59,7 +62,7 @@
               <h4>Guía básica</h4>
             </div>
             <div class="caption_img">
-              <img src="/assets/diario.png" alt="">
+              <img src="/assets/diario24.png" alt="">
             </div>
           </div>
         </li> 
@@ -77,6 +80,9 @@
             <img src="/assets/toledo_basica.jpg" alt="Toledo_basica">
             <div class="caption">
               <h4>Guía básica</h4>
+            </div>
+            <div class="caption_img">
+              <img src="/assets/diario24.png" alt="">
             </div>
           </div>
         </li> 
