Add new forms for trip editing

--- a/app/views/home/_info_city.html.erb
+++ b/app/views/home/_info_city.html.erb
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="item">
-          <%= image_tag('toledo_rio.JPG') %>
+          <%= image_tag('toledo_rio.jpg') %>
           <div class="container">
             <div class="carousel-caption">
               <h1>One more for good measure.</h1>
