--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,6 +1,2 @@
-<%= form_for @trip do |f| %>
-	<h2>Form to create a new trip</h2>
-	<%= f.label :title %>
-	<%= f.text_field :title %>
-	<%= f.submit %>
-<% end %>
+<h2>Form to create a new trip</h2>
+<%= render :partial => 'form' %>
