Fix adding photos to ActivityObjects

--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render :partial => 'form' %>
 <%= render :partial => 'shared/form_description', :locals => {:ao => @trip} %>
-<%#= render :partial => 'shared/form_photo', :locals => {:ao => @trip} %>
+<%= render :partial => 'shared/form_photo', :locals => {:ao => @trip} %>
