--- a/app/assets/stylesheets/smart_city_guides/frontpage.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/frontpage.css.sass
@@ -1,6 +1,7 @@
 .input_username
 	color: #fff
-	background-color: transparent !important
+	input
+		background-color: white
 
 .titlecentral
 	text-align: center
