--- a/app/views/points/_item.html.erb
+++ b/app/views/points/_item.html.erb
@@ -1,9 +1,21 @@
 				<li>
 					<div class="thumbnail">
+						<%= image_tag('/assets/places/3/zoco2.jpg') %>
+						<div class="caption">
+							<a href=""><h4>Plaza Zocodover</h4></a>
+							<p>The old Tulaytula cattle market and...</p>
+							<p>
+								<a class="btn btn-primary" href="#">Add to mi guide</a>
+							</p>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="thumbnail">
 						<%= image_tag('catedral.jpg') %>
 						<div class="caption">
-							<h4>Catedral Primada</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
+							<a href=""><h4>Cathedral of Toledo</h4></a>
+							<p>The primatial cathedral and one of the three...</p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
 							</p>
@@ -14,8 +26,8 @@
 				<div class="thumbnail">
 					<%= image_tag('alcazar.JPG') %>
 					<div class="caption">
-						<h4>Alcázar</h4>
-						<p>justo odio egestas eget quam. Donec id elit </p>
+						<a href=""><h4>Alcázar of Toledo</h4></a>
+						<p>The Alcázar of Toledo is a stone fortification...</p>
 						<p>
 							<a class="btn btn-primary" href="#">Add to mi guide</a>
 						</p>
@@ -26,8 +38,8 @@
 					<div class="thumbnail">
 						<%= image_tag('toledo2.jpg') %>
 						<div class="caption">
-							<h4>Callejón del Diablo, no te lo puedes perder</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
+							<a href=""><h4>Callejón del Diablo</h4></a>
+							<p>Narrow street full of legends and mistery</p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
 							</p>
@@ -38,8 +50,8 @@
 					<div class="thumbnail">
 						<%= image_tag('san_juan.jpg') %>
 						<div class="caption">
-							<h4>San Juan de los Reyes</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
+							<a href=""><h4>Monastery of San Juan de los Reyes</h4></a>
+							<p>The monastery of San Juan de los Reyes was built by...</p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
 							</p>
@@ -50,7 +62,7 @@
 					<div class="thumbnail">
 						<%= image_tag('ruta_toledo.jpg') %>
 						<div class="caption">
-							<h4>Paseo Río Tajo</h4>
+							<a href=""><h4>River walk</h4></a>
 							<p>justo odio egestas eget quam. Donec id elit </p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
@@ -62,8 +74,8 @@
 					<div class="thumbnail">
 						<%= image_tag('adolfo.jpg') %>
 						<div class="caption">
-							<h4>Restaurante Adolfo</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
+							<a href=""><h4>Adolfo's restaurant</h4></a>
+							<p>One of the best restaurants in Toledo </p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
 							</p>
@@ -74,8 +86,8 @@
 					<div class="thumbnail">
 						<%= image_tag('picaro.jpg') %>
 						<div class="caption">
-							<h4>Café Pícaro</h4>
-							<p>justo odio egestas eget quam. Donec id elit </p>
+							<a href=""><h4>Pícaro's Coffe Shop</h4></a>
+							<p>Coffe and Concerts everiday</p>
 							<p>
 								<a class="btn btn-primary" href="#">Add to mi guide</a>
 							</p>
