--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -25,18 +25,23 @@
 <div id="content_profile">
   <div class="trip_content">
       <ul class="trips">
+        <div class="city"><h4>TOLEDO</h4></div>
         <li class="plannings">
           <div class="planning_item">
             <img src="/assets/toledo_basica.jpg" alt="Toledo_basica">
             <div class="caption">
-              <h4>Guía básica</h4>
+              <h4>Planning</h4>
+            </div>
+            <div class="caption_img">
+              <img src="/assets/guia2.png" alt="">
             </div>
           </div>
+        </li>
         <li class="diaries">
           <div class="diary_item">
-            <img src="/assets/toledo_basica.jpg" alt="Toledo_basica">
+            <img src="/assets/san_juan.jpg" alt="Toledo_basica">
             <div class="caption">
-              <h4>Guía básica</h4>
+              <h4>Diary</h4>
             </div>
             <div class="caption_img">
               <img src="/assets/diario24.png" alt="">
@@ -45,11 +50,12 @@
         </li> 
       </ul>
       <ul class="trips">
+        <div class="city"><h4>LONDON</h4></div>
         <li class="plannings">
           <div class="planning_item">
-            <img src="/assets/toledo_rio3.jpeg" alt="Toledo_basica">
+            <img src="/assets/london.jpg" alt="Toledo_basica">
             <div class="caption">
-              <h4>Guía básica</h4>
+              <h4>Planning</h4>
             </div>
             <div class="caption_img">
               <img src="/assets/guia2.png" alt="">
@@ -57,9 +63,9 @@
           </div>
         <li class="diaries">
           <div class="diary_item">
-            <img src="/assets/picaro.jpg" alt="Toledo_basica">
+            <img src="/assets/lodon2.jpg" alt="Toledo_basica">
             <div class="caption">
-              <h4>Guía básica</h4>
+              <h4>Diary</h4>
             </div>
             <div class="caption_img">
               <img src="/assets/diario24.png" alt="">
@@ -68,18 +74,23 @@
         </li> 
       </ul>     
       <ul class="trips">
+        <div class="city"><h4>VENICE</h4></div>
         <li class="plannings">
           <div class="planning_item">
-            <img src="/assets/toledo_basica.jpg" alt="Toledo_basica">
+            <img src="/assets/venicejpg" alt="Toledo_basica">
             <div class="caption">
-              <h4>Guía básica</h4>
+              <h4>Planning</h4>
+            </div>
+            <div class="caption_img">
+              <img src="/assets/guia2.png" alt="">
             </div>
           </div>
+        </li>
         <li class="diaries">
           <div class="diary_item">
-            <img src="/assets/toledo_basica.jpg" alt="Toledo_basica">
+            <img src="/assets/venice2.jpg" alt="Toledo_basica">
             <div class="caption">
-              <h4>Guía básica</h4>
+              <h4>Diary</h4>
             </div>
             <div class="caption_img">
               <img src="/assets/diario24.png" alt="">
@@ -104,7 +115,6 @@
   </div>
 </div-->
     <div class="social">
-      contacts
     <%= render :partial => "users/groups",
            :locals  => { :user => @user } %>
 
