--- a/app/assets/stylesheets/smart_city_guides/_trips.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/_trips.css.sass
@@ -4,17 +4,19 @@
 	float: left
 	ul
 		border-bottom: 1px solid #DDDDDD
-		padding-bottom: 17px
+		padding-bottom: 10px
 		margin-left: auto
 		margin-right: auto
+		margin-bottom: 20px
 		width: 385px
 		li
 			display: inline-block
-			width: 170px
 			margin-bottom: 10px
 			margin-right: 10px
 			margin-left: 10px
 			margin-top: 10px
+		.city
+			text-align: center
 .planning_item
 	border-bottom: 9px solid grey
 	border-left: 9px solid #DDDDDD
