--- a/app/views/home/_info_city.html.erb
+++ b/app/views/home/_info_city.html.erb
@@ -7,7 +7,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Toledo</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <p class="lead">World Heritage Site by UNESCO since 1986 for its extensive cultural and monumental heritage as one of the former capitals of the Spanish Empire</p>
             </div>
           </div>
         </div>
@@ -15,8 +15,8 @@
           <%= image_tag('toledo3.jpg') %>
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p class="lead">Esta ciudad amurallada esconde un inagotable caudal de sorpresas</p>
+              <h1>The city of the three cultures</h1>
+              <p class="lead">Toledo was a place of coexistence of Christian, Muslim and Jewish cultures</p>
             </div>
           </div>
         </div>
@@ -24,8 +24,8 @@
           <%= image_tag('toledo_rio.jpg') %>
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>Misterious Toledo</h1>
+              <p class="lead">That walled city that shows and hides an inexhaustible wealth of surprises</p>
             </div>
           </div>
         </div>
