--- a/app/views/layouts/_header_signed_in.erb
+++ b/app/views/layouts/_header_signed_in.erb
@@ -5,7 +5,7 @@
     <%#= link_to(image_tag('header-logo.png', :alt => t('site.name')), root_path, class: 'brand') %>
 
     <!-- FIXME: search javascript functionality in 'layouts/search' -->
-    <a href="/home"><h2 class="brand" >holamundo</h2></a>
+    <a href="/home"><h2 class="brand" >HELLOWORLD</h2></a>
     <ul class="nav pull-right">
       <div class="search-nav pull-left">
       <%= form_tag search_path, method: 'get', class: "navbar-search pull-right" do %>
