--- a/app/views/users/_groups.html.erb
+++ b/app/views/users/_groups.html.erb
@@ -1,4 +1,4 @@
-<div class="recent_groups">
+<!--div class="recent_groups">
 <% if (groups = user.recent_groups).present? %>
   <h2>
       <%=t('group.last') %> (<span class="group_count"><%= groups.count %></span>)
@@ -6,4 +6,4 @@
 
   <%= render groups %>
 <% end %>
-</div>
+</div>-->
