--- a/app/assets/stylesheets/smart_city_guides/guides.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/guides.css.sass
@@ -1,8 +1,6 @@
 .guide_all
 	@include makeColumn(12, 0)
 	margin-left: 0px
-
-
 	.details
 		@include makeColumn(7, 0)
 		margin-left: 0px
@@ -45,6 +43,13 @@
 		overflow-y: auto
 
 
+.photoiframe
+	border: medium none
+	height: 644px
+	margin-left: 12px
+	margin-right: auto
+	width: 948px
+	@include border-radius(10px)
 
 
 
