--- a/app/assets/stylesheets/smart_city_guides/places1.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/places1.css.sass
@@ -1,3 +1,12 @@
+.place_show
+	@include makeColumn(12, 0)
+	margin-left: 0px
+	.map
+		@include makeColumn(6, 0)
+
+
+
+
 .restructure
 	@include makeColumn(6, 0)
 	margin-left: 0px
@@ -23,7 +32,5 @@
 .titlecentral
 	text-align: center
 	display: inline-block
-	position: absolute
-	z-index: 2
-	width: 940px
+
 
