--- a/app/assets/stylesheets/smart_city_guides/rewrite_bootsrap/_variables.css.scss
+++ b/app/assets/stylesheets/smart_city_guides/rewrite_bootsrap/_variables.css.scss
@@ -113,7 +113,7 @@ $btnInverseBackgroundHighlight:     $grayDarker !default;
 // -------------------------
 $inputBackground:               $white !default;
 $inputBorder:                   #ccc !default;
-$inputBorderRadius:             $baseBorderRadius !default;
+$inputBorderRadius:             5px ;
 $inputDisabledBackground:       $grayLighter !default;
 $formActionsBackground:         #f5f5f5 !default;
 $inputHeight:                   $baseLineHeight + 10px; // base line-height + 8px vertical padding + 2px top/bottom border
