--- a/app/assets/stylesheets/smart_city_guides/guides.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/guides.css.sass
@@ -43,13 +43,15 @@
 		overflow-y: auto
 
 
-.photoiframe
-	border: medium none
-	height: 644px
-	margin-left: 12px
-	margin-right: auto
-	width: 948px
-	@include border-radius(10px)
+	.photoiframe
+		border: medium none
+		height: 644px
+		margin-left: 12px
+		margin-right: auto
+		width: 948px
+		@include border-radius(10px)
+	.book_show
+		margin-left: 20px
 
 
 
