--- a/app/views/guides/_book.html.erb
+++ b/app/views/guides/_book.html.erb
@@ -1,1 +1,2 @@
-<iframe id="presentation_iframe" src="http://vishub.org/excursions/154.full" width="940" height="680" style="border:0" iframeborder="0" frameborder="0" iframeElement.frameBorder = 0;></iframe>
+<div class="book_show"><iframe id="presentation_iframe"  src="http://vishub.org/excursions/154.full" width="910" height="680" style="border:0" iframeborder="0" frameborder="0" iframeElement.frameBorder = 0;></iframe>
+</div>
