--- a/app/assets/stylesheets/smart_city_guides/guides.css.sass
+++ b/app/assets/stylesheets/smart_city_guides/guides.css.sass
@@ -50,8 +50,10 @@
 		margin-right: auto
 		width: 948px
 		@include border-radius(10px)
-	.book_show
-		margin-left: 20px
+#presentation_iframe
+	.slider
+		height: none !important
+
 
 
 
